--- a/layout.html
+++ b/layout.html
@@ -1081,7 +1081,7 @@
               </div>
               <div class="col-lg-2">
                 <input type="radio">
-                <label>حساب ذوي صلة</label>
+                <label>حساب ذوي </label>
               </div>
               
     
